tests/sumo/tls/NEMA/errors/ticket15001/errors.sumo
Error: At traffic signal '63015005' program '0' phase '4' not found in ring '0'.
Quitting (on error).
